rft: code clean up with java style